@@ -47,7 +47,6 @@ void _Objects_Extend_information(
 )
 {
   Objects_Control  *the_object;
-  void             *name_area;
   Chain_Control     Inactive;
   uint32_t          block_count;
   uint32_t          block;
@@ -84,7 +83,6 @@ void _Objects_Extend_information(
   if (index_base >= information->maximum ) {
     ISR_Level         level;
     void            **object_blocks;
-    void            **name_table;
     uint32_t         *inactive_per_block;
     Objects_Control **local_table;
     uint32_t          maximum;
@@ -101,7 +99,6 @@ void _Objects_Extend_information(
      *
      *      void            *objects[block_count];
      *      uint32_t         inactive_count[block_count];
-     *      Objects_Name    *name_table[block_count];
      *      Objects_Control *local_table[maximum];
      *
      *  This is the order in memory. Watch changing the order. See the memcpy
@@ -135,7 +132,7 @@ void _Objects_Extend_information(
       object_blocks = (void**)
         _Workspace_Allocate_or_fatal_error(
           block_count *
-             (sizeof(void *) + sizeof(uint32_t  ) + sizeof(Objects_Name *)) +
+             (sizeof(void *) + sizeof(uint32_t) + sizeof(Objects_Name *)) +
           ((maximum + minimum_index) * sizeof(Objects_Control *))
         );
     }
@@ -147,10 +144,8 @@ void _Objects_Extend_information(
 
     inactive_per_block = (uint32_t   *) _Addresses_Add_offset(
         object_blocks, block_count * sizeof(void*) );
-    name_table = (void *) _Addresses_Add_offset(
-        inactive_per_block, block_count * sizeof(uint32_t  ) );
     local_table = (Objects_Control **) _Addresses_Add_offset(
-        name_table, block_count * sizeof(Objects_Name *) );
+        inactive_per_block, block_count * sizeof(uint32_t) );
 
     /*
      *  Take the block count down. Saves all the (block_count - 1)
@@ -172,9 +167,6 @@ void _Objects_Extend_information(
       memcpy( inactive_per_block,
               information->inactive_per_block,
               block_count * sizeof(uint32_t  ) );
-      memcpy( name_table,
-              information->name_table,
-              block_count * sizeof(Objects_Name *) );
       memcpy( local_table,
               information->local_table,
               (information->maximum + minimum_index) * sizeof(Objects_Control *) );
@@ -195,7 +187,6 @@ void _Objects_Extend_information(
 
     object_blocks[block_count] = NULL;
     inactive_per_block[block_count] = 0;
-    // name_table[block_count] = NULL;
 
     for ( index=index_base ;
           index < ( information->allocation_size + index_base );
@@ -209,7 +200,6 @@ void _Objects_Extend_information(
 
     information->object_blocks = object_blocks;
     information->inactive_per_block = inactive_per_block;
-    information->name_table = (void *)name_table;
     information->local_table = local_table;
     information->maximum = maximum;
     information->maximum_id = _Objects_Build_id(
@@ -249,12 +239,6 @@ void _Objects_Extend_information(
       );
   }
 
-  name_area = (Objects_Name *) _Addresses_Add_offset(
-    information->object_blocks[ block ],
-    (information->allocation_size * information->size)
-  );
-  // information->name_table[ block ] = name_area;
-
   /*
    *  Initialize objects .. add to a local chain first.
    */
@@ -280,8 +264,6 @@ void _Objects_Extend_information(
         _Objects_Local_node,
         index
       );
-
-    name_area = (void *)_Addresses_Add_offset( name_area, information->name_length );
 
     _Chain_Append( &information->Inactive, &the_object->Node );
 
