@@ -1,3 +1,11 @@
+2008-01-24	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* score/include/rtems/score/object.h,
+	score/src/objectextendinformation.c,
+	score/src/objectinitializeinformation.c,
+	score/src/objectshrinkinformation.c: Eliminate name_table since it is
+	not used.
+
 2008-01-23	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* score/src/objectnametoidstring.c: New file.
